--- a/main/templates/main/calendar.html
+++ b/main/templates/main/calendar.html
@@ -1,6 +1,6 @@
 {% extends 'main.html' %} {% load static %} {%block content%}
 <h1>Seasonal Crop Calendar of Nepal</h1>
-<div class="container">
+<div class="container-fluid">
   <div class="row">
     <div class="col-sm-3">
       <div class="list-group">
