--- a/main/templates/main/ourTeam.html
+++ b/main/templates/main/ourTeam.html
@@ -116,5 +116,14 @@
     font-size: 2rem;
     font-family: -webkit-body;
   }
+  @media only screen and (max-width: 500px) {
+    .row{
+      margin:0;
+      margin-top: 8rem !important;
+    margin-bottom: 2rem !important;
+    width: 90%;
+    }
+
+  }
 </style>
 {% endblock %}
