--- a/main/templates/main/ourTeam.html
+++ b/main/templates/main/ourTeam.html
@@ -1,6 +1,6 @@
 {% extends 'main.html' %} {% load static %} {%block content%}
 <div class="my-team">
-  <h1>Our Team</h1>
+  <h2 class="text-white">Our Team</h2>
   <div class="row row-cols-1 row-cols-md-3 g-4 m-2">
     <div class="col">
       <div class="card h-100">
