--- a/templates/main.html
+++ b/templates/main.html
@@ -29,9 +29,9 @@
   <body>
     <style>
       h1 {
-        font-family: "Dancing Script", cursive !important;
-        font-size: 4rem !important;
-        margin-bottom: 3rem !important;
+        font-family: "Dancing Script", cursive ;
+        font-size: 4rem ;
+        margin-bottom: 3rem ;
         text-align: center;
       }
     </style>
